@@ -200,6 +200,7 @@ Chronological list of authors
   - Jennifer A Clark
   - Jake Fennick
   - Utsav Khatu
+  - Patricio Barletta
   - Mikhail Glagolev
 
 
