@@ -182,10 +182,11 @@ class TestLAMMPSDeletedAtoms(LammpsBase):
 
 class TestLammpsDataPairIJ(LammpsBase):
     """Tests the reading of lammps .data topology file with a
-       PairIJ Coeffs section
+    PairIJ Coeffs section
     """
+    
     expected_attrs = ['types', 'resids', 'masses',
-                      'bonds', 'angles', 'dihedrals']
+                      'bonds', 'angles', 'dihedrals', 'impropers']
     ref_filename = LAMMPSdata_PairIJ
     expected_n_atoms = 800
     expected_n_atom_types = 2
